welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: not found: type Vert
while (!getColorSol():Vert)
                      ^Balin:2: error: not found: value getColorSol
while (!getColorSol():Vert)
        ^